# gecco-qa

./: ERRATUM.md  GECCO.md  README.md  dream-history.md  gecco-dream.md  gecco-talk-script-lyra.md  gecco-talk.aux  gecco-talk.tex  gecco-talk.vrb  lambda2-correction.md  paper-camera-ready-gecco-v1.tex  qa-corrections.md  questions-audience-10.md  questions-extra.md  questions.txt  verify_lambda2.py  verify_redteam.py
do-not-discuss/: DO-NOT-DISCUSS.md  act2026-paper.tex
supplementary/: README.md
supplementary/experiments/: checkers_domain.py  coupling_onset_analysis.py  early_convergence_analysis.py  experiment_e_raw.csv  graph_coloring_domain.py  knapsack_domain.py  maze_domain.py  multi_domain_analysis.py  nothanks_domain.py  onemax_stats.py  plot_fingerprints.py  plot_multi_domain.py  sorting_network_domain.py  strategy_fingerprints.py  test_onemax.py
supplementary/haskell-framework/: Makefile  README.md  categorical-evolution.cabal
supplementary/haskell-framework/demo/: BoundarySweepDemo.hs  CheckersDemo.hs  CoevoDemo.hs  ComparisonDemo.hs  CrossDomainDemo.hs  GPDemo.hs  IslandDemo.hs  LandscapeDemo.hs  LaxFunctorDemo.hs  Main.hs  MazeMigSweepDemo.hs  ParamSweepDemo.hs  PhenoDiagDemo.hs  PopSizeSweepDemo.hs  StrategyDemo.hs
supplementary/haskell-framework/src/Evolution/: Category.hs  Coevolution.hs  Effects.hs  Island.hs  Landscape.hs  Operators.hs  Pipeline.hs  Strategy.hs
supplementary/haskell-framework/src/Evolution/Examples/: BitString.hs  Checkers.hs  GraphColoring.hs  Knapsack.hs  Maze.hs  SortingNetwork.hs  SymbolicRegression.hs
supplementary/haskell-framework/test/: Main.hs
supplementary/haskell-framework/test/Test/: Category.hs  Checkers.hs  Coevolution.hs  Island.hs  Landscape.hs  Maze.hs  Operators.hs  Pipeline.hs  Strategy.hs  SymbolicRegression.hs
