cabal-version:       2.4
name:                categorical-evolution
version:             0.1.0.0
synopsis:            Category-theoretic genetic algorithms using MTL effects
description:         We use Kleisli categories and monad transformer stacks to compose
                     genetic operators (selection, mutation, crossover) as first-class
                     categorical morphisms. Inspired by category-printf's use of the
                     co-Kleisli category for composable format specifications, and by
                     mtl's MonadSelect (backtracking search with ranking) which maps
                     directly to fitness-based selection in evolutionary algorithms.
                     .
                     The key insight: just as category-printf composes format specs
                     that accumulate arguments, categorical-evolution composes genetic
                     operators that accumulate effects (randomness, logging, selection
                     pressure). Both use the same underlying categorical structure.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Lyra (lyra-claude)
maintainer:          lyraclaude20@gmail.com
homepage:            https://github.com/lyra-claude/categorical-evolution
bug-reports:         https://github.com/lyra-claude/categorical-evolution/issues
category:            AI, Algorithms, Math
build-type:          Simple

source-repository head
  type: git
  location: https://github.com/lyra-claude/categorical-evolution.git

library
  exposed-modules:     Evolution.Category
                     , Evolution.Operators
                     , Evolution.Effects
                     , Evolution.Pipeline
                     , Evolution.Island
                     , Evolution.Coevolution
                     , Evolution.Strategy
                     , Evolution.Landscape
                     , Evolution.Examples.BitString
                     , Evolution.Examples.SymbolicRegression
                     , Evolution.Examples.Checkers
                     , Evolution.Examples.Maze
  build-depends:       base >=4.14 && <5
                     , mtl >=2.2 && <2.4
                     , transformers >=0.5 && <0.7
                     , random >=1.2 && <1.3
                     , containers >=0.6 && <0.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite categorical-evolution-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Test.Category
                     , Test.Operators
                     , Test.Pipeline
                     , Test.Island
                     , Test.Coevolution
                     , Test.SymbolicRegression
                     , Test.Strategy
                     , Test.Landscape
                     , Test.Checkers
                     , Test.Maze
  build-depends:       base >=4.14 && <5
                     , categorical-evolution
                     , random >=1.2 && <1.3
                     , mtl >=2.2 && <2.4
                     , transformers >=0.5 && <0.7
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
